--- a/blog/templates/article_page.html
+++ b/blog/templates/article_page.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}JapLAN - Маршруты путешествий{% endblock %}
 
 {% block content %}
-    <h1>JapLAN</h1>
-
-            <div class="article">
-                <h2 class="article-tittle">{{ article.title }}</h2>
-                <p class="article-full_text">{{ article.full_text }}</p>
-            </div>
+    <div class="article">
+        <h2 class="article-tittle">{{ article.title }}</h2>
+        <p class="article-full_text">{{ article.full_text }}</p>
+    </div>
 
 {% endblock %}
