--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,6 +5,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <link href="{% static 'blog/styles.css' %}" rel="stylesheet" type="text/css">
     </head>
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+        <div class="row page-header">
+            <div class="col">
+                <h1 class="logo-top">
+                    <img src="{% static 'img/logo.png' %}"/>
+                    <span class="site-name">JapLAN</span>
+
+                </h1>
+            </div>
+        </div>
+        {% block content %}
+        {% endblock %}
+    </div>
 </html>
