--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -1,24 +1,20 @@
-{% extends 'base.html' %}
 
+{% extends 'base.html' %}
+{% load static %}
 {% block title %}JapLAN - Маршруты путешествий{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <h1>JapLAN</h1>
-        </div>
-        <div class="row">
-            <div class="Col-md-8 col-md-4">
-                <div class = "article-list">
-                    {% for article in articles %}
-                        <div class="article">
-                            <h2 class="article-tittle">
-                                <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
-                            </h2>
-                            <p class="article-summary">{{ article.summary }}</p>
-                        </div>
-                    {% endfor %}
-                </div>
+    <div class="row">
+        <div class="Col-md-8 col-md-4">
+            <div class = "article-list">
+                {% for article in articles %}
+                    <div class="article">
+                        <h2 class="article-title">
+                            <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+                        </h2>
+                        <p class="article-summary">{{ article.summary }}</p>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
