--- a/blog/templates/article_page.html
+++ b/blog/templates/article_page.html
@@ -3,9 +3,12 @@
 {% block title %}JapLAN - Маршруты путешествий{% endblock %}
 
 {% block content %}
-    <div class="article">
-        <h2 class="article-tittle">{{ article.title }}</h2>
-        <p class="article-full_text">{{ article.full_text }}</p>
+    <div class="row">
+        <div class="col-md-8 col-lg-8">
+            <div class="article">
+                <h1 class="article-tittle">{{ article.title }}</h1>
+                <p class="article-full_text">{{ article.full_text | safe}}</p>
+            </div>
+        </div>
     </div>
-
 {% endblock %}
