--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="Col-md-8 col-md-4">
+        <div class="Col-md-8 col-sm-12">
             <div class = "article-list">
                 {% for article in articles %}
                     <div class="article">
