--- a/blog/static/blog/styles.css
+++ b/blog/static/blog/styles.css
@@ -10,11 +10,23 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: source-sans-3-semi-bold;
+    src: url("../fonts/SourceSans3-SemiBold.ttf");
+    font-style: normal;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     color: #333;
     font-family: source-sans-3-regular, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 300;
+    margin-bottom: 60px;
 }
 
 .page-header {
@@ -26,12 +38,17 @@ h1, h2, h3 {
     font-family: source-sans-3-black, sans-serif;
 }
 
+h1 {
+    font-size: 1.5em;
+}
+
 h2 {
-    font-size: 1.4em;
+    margin-bottom: 1rem;
+    font-size: 1.3em;
 }
 
 h3 {
-    font-size: 1.3em;
+    font-size: 1.1em;
 }
 
 h4, h5, h6 {
@@ -67,4 +84,50 @@ h2.article-title a {
 
 h2.article-title a:hover {
     color: #666;
+}
+
+.text-accent {
+    padding: 1rem 1rem 1rem 1rem;
+    background-color: #F2E2BA;
+    margin-bottom: 1rem;
+}
+
+table {
+    border-spacing: 0;
+    border-collapse: collapse;
+    width:80%;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+figure table {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+tr {
+    font-size: 1rem;
+    line-height: inherit;
+}
+
+th {
+    font-family: source-sans-3-semi-bold;
+    font-size: 1rem;
+    padding: .5rem 1.5rem .5rem 0;
+
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+
+@media only screen and (max-width: 992px) {
+    table {
+        width: 100%;
+    }
 }
