--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,17 +5,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <link href="{% static 'blog/styles.css' %}" rel="stylesheet" type="text/css">
     </head>
-    <div class="container">
-        <div class="row page-header">
-            <div class="col">
-                <h1 class="logo-top">
-                    <img src="{% static 'img/logo.png' %}"/>
-                    <span class="site-name">JapLAN</span>
+    <body>
+        <div class="container">
+            <div class="row page-header">
+                <div class="col">
+                    <h1 class="logo-top">
+                        <img src="{% static 'img/logo.png' %}"/>
+                        <span class="site-name">JapLAN</span>
 
-                </h1>
+                    </h1>
+                </div>
             </div>
+            {% block content %}
+            {% endblock %}
         </div>
-        {% block content %}
-        {% endblock %}
-    </div>
+
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">My footer text</span>
+            </div>
+        </footer>
+    </body>
 </html>
