--- a/blog/static/blog/styles.css
+++ b/blog/static/blog/styles.css
@@ -123,7 +123,9 @@ th {
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #f5f5f5;
+    background-color: #fff
+    font-family: source-sans-3-semi-bold, sans-serif;
+    font-size: 0.8em;
 }
 
 @media only screen and (max-width: 992px) {
