--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,6 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <link href="{% static 'blog/styles.css' %}" rel="stylesheet" type="text/css">
     </head>
+
     <body>
         <div class="container">
             <div class="row page-header">
@@ -22,8 +23,9 @@
 
         <footer class="footer">
             <div class="container">
-                <span class="text-muted">My footer text</span>
+                <span class="text-muted">Enjoy your trip! ©JapLAN {% now "Y" %}</span>
             </div>
         </footer>
+
     </body>
 </html>
