--- a/blog/templates/article_page.html
+++ b/blog/templates/article_page.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-8 col-lg-8">
             <div class="article">
-                <h1 class="article-tittle">{{ article.title }}</h1>
+                <h1 class="article-title">{{ article.title }}</h1>
                 <p class="article-full_text">{{ article.full_text | safe}}</p>
             </div>
         </div>
