--- a/blog/templates/article_page.html
+++ b/blog/templates/article_page.html
@@ -7,7 +7,7 @@
         <div class="col-md-8 col-lg-8">
             <div class="article">
                 <h1 class="article-title">{{ article.title }}</h1>
-                <p class="article-full_text">{{ article.full_text | safe}}</p>
+                <div class="article-full_text">{{ article.full_text | safe}}</div>
             </div>
         </div>
     </div>
