--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -1,6 +1,7 @@
 
 {% extends 'base.html' %}
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 {% block title %}JapLAN - Маршруты путешествий{% endblock %}
 
 {% block content %}
