--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <html>
     <head>
         <title>{% block title %}{% endblock %}</title>
