--- a/deploy_tools/sites-available.j2
+++ b/deploy_tools/sites-available.j2
@@ -5,6 +5,11 @@ server {
     location /static {
         alias /home/{{ ansible_user }}/sites/{{ host }}/static;
     }
+    
+    location /media {
+        alias /home/{{ ansible_user }}/sites/{{ host }}/media;
+    }
+
     location / {
         proxy_pass http://unix:/tmp/{{ host }}.socket;
         proxy_set_header Host $host;
