--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -7,6 +7,7 @@
         <link href="{% static 'blog/styles.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'blog/likely.css' %}" rel="stylesheet">
         <script src="{% static 'blog/likely.js' %}"></script>
+        <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
         {% block opengraph %}{% endblock %}
     </head>
 
